<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="10dp"
    android:paddingVertical="5dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/appBlue"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="15dp"
            android:paddingVertical="25dp"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtCityName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunitobold"
                    android:text="@string/city_name"
                    android:textColor="@color/appWhite"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txtAQICity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/nunitobold"
                        android:text="@string/aqi_73"
                        android:textColor="@color/appWhite" />

                    <TextView
                        android:id="@+id/txtMaxMinCity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/nunitobold"
                        android:paddingHorizontal="15dp"
                        android:text="@string/_33_27"
                        android:textColor="@color/appWhite" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/txtTemp"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:fontFamily="@font/nunitobold"
                android:gravity="center"
                android:text="@string/_20"
                android:textColor="@color/appWhite"
                android:textSize="30sp" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>